--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Raleway Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
@@ -8,22 +12,36 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="brand-logo"><img src="./logo.png" alt=""></div>
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-        <div class="navbar-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Guide</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+    <div class="header">
+        <nav class="navbar">
+            <div class="brand-logo"><img src="./logo.png" alt=""></div>
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Guide</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+
+            </div>
+        </nav>
+    </div>
+    <!-- Section 1 -->
+    <div class="content-section">
+        <div class="container">
+            <p class="Welcome">Welcome to Herodev Web</p>
+            <h1>Journey to All Oman Corners</h1>
+            <p>we help people explore best places in oman</p>
+            <button>Start Your Journey</button>
         </div>
-    </nav>
+    </div>
 </body>
 </html>
