--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="./styles.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Custom css -->
+    <link rel="stylesheet" href="./styles/styles.css">
+    <!-- Some javaScript -->
     <script defer src="./script.js"></script>
 </head>
 <body>
@@ -22,11 +27,11 @@
             </a>
             <div class="navbar-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Guide</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div>
@@ -44,7 +49,7 @@
         </div>
     </div>
     <!-- Section 2 -->
-     <div class="section2-container">
+     <!-- <div class="section2-container">
         <h1 class="section2-h1">Popular Destinations</h1>
         <div class="card-container">
             <div class="card-article">
@@ -93,6 +98,6 @@
              </div>
         </div>
 
-     </div>
+     </div> -->
 </body>
 </html>
