--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <!-- Section 2 -->
-     <!-- <div class="section2-container">
+    <div class="section2-container">
         <h1 class="section2-h1">Popular Destinations</h1>
         <div class="card-container">
             <div class="card-article">
@@ -98,6 +98,25 @@
              </div>
         </div>
 
-     </div> -->
+    </div>
+    <!-- Footers -->
+    <div class="footer-container">
+        <div class="logo">
+            <img src="./logo.png" alt="">
+            <h1>Travel</h1>
+            <p>travel with us and explore the world without limit</p>
+        </div>
+        <div class="about">
+            <h1>About</h1>
+            <p>About Us</p>
+            <p>Features</p>
+            <p>Blog & News</p>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>+918 91491828</p>
+            <p>Herodev@gmail.com</p>
+        </div>
+    </div>
 </body>
 </html>
