--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="navbar-links">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">Guide</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./guide.html">Guide</a></li>
+                    <li><a href="./local-stories.html">Blog</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
