--- a/local-stories.html
+++ b/local-stories.html
@@ -30,8 +30,8 @@
             <div class="navbar-links">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">Guide</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./guide.html">Guide</a></li>
+                    <li><a href="./local-stories.html">Blog</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -61,6 +61,26 @@
     <!-- Section 2 -->
     <div class="container-fluid" style="background-color: #2D3250" >
         <h1 class="h1 text-white page-title">Local Stories</h1>
+    </div>
+
+     <!-- Footer -->
+    <div class="footer-container">
+        <div class="logo">
+            <img src="./logo.png" alt="">
+            <h1>Travel</h1>
+            <p>travel with us and explore the world without limit</p>
+        </div>
+        <div class="about">
+            <h1>About</h1>
+            <p>About Us</p>
+            <p>Features</p>
+            <p>Blog & News</p>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>+918 91491828</p>
+            <p>Herodev@gmail.com</p>
+        </div>
     </div>
 </body>
 </html>
