--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
             <div class="navbar-links">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">Guide</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./guide.html">Guide</a></li>
+                    <li><a href="./local-stories.html">Blog</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -64,5 +64,24 @@
             </div>
         </section>
     </main>
+     <!-- Footer -->
+    <div class="footer-container">
+        <div class="logo">
+            <img src="./logo.png" alt="">
+            <h1>Travel</h1>
+            <p>travel with us and explore the world without limit</p>
+        </div>
+        <div class="about">
+            <h1>About</h1>
+            <p>About Us</p>
+            <p>Features</p>
+            <p>Blog & News</p>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>+918 91491828</p>
+            <p>Herodev@gmail.com</p>
+        </div>
+    </div>
 </body>
 </html>
