--- a/local-stories.html
+++ b/local-stories.html
@@ -59,8 +59,60 @@
 
     </div>
     <!-- Section 2 -->
-    <div class="container-fluid" style="background-color: #2D3250" >
-        <h1 class="h1 text-white page-title">Local Stories</h1>
+    <div class="section2-container" >
+        <h1>Local Stories</h1>
+        <p class="">Pick a category to filter your recs</p>
+        <button class="btn1">Essentials</button>
+        <button>Museums</button>
+        <button>Outdoors</button>
+        <button>Art & theater</button>
+        <button>Nightlife</button>
+        <button>Event</button>
+        <div class="card-container">
+            <div class="img-card">
+                <img src="./images/sultan qaboos mosque.jpg" alt="">
+                <p>Sultan Qaboos Grand Mosque</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 30%;"></div>
+                </div>
+            </div>
+            
+            <div class="img-card">
+                <img src="./images/royal-opera-house.jpg" alt="">
+                <p>Royal Opera House</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 30%;"></div>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/DSCF5259.jpg" alt="">
+                <p>Jabel Akhdar</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 70%;"></div>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/salendo-al-jebel-shams.jpg" alt="">
+                <p>Jabel Shams</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 50%;"></div>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/20160814-123833-largejpg.jpg" alt="">
+                <p>Wadi Darbat</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 99%;"></div>
+                </div>
+            </div>
+            <div class="img-card">
+                <img src="./images/photo1jpg.jpg" alt="">
+                <p>Salalah</p>
+                <div class="progress" style="width: 220px; height: 10px;">
+                    <div class="progress-bar" style="width: 90%;"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
      <!-- Footer -->
