--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | HeroDev Travel</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/about.css">
 </head>
 <body>
     <!-- Header -->
@@ -39,6 +40,39 @@
                 Our mission is to ensure an unforgettable journey every step of the way.
             </p>
             <button class="cta-button">Contact Us →</button>
+            <!-- Team Table Section -->
+            <section class="contact-table-section">
+                <h2>Our Team</h2>
+                <div class="table-container">
+                    <table class="contact-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Phone Number</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Fatemeh</td>
+                                <td>153141@student.squ.edu.com</td>
+                                <td>+39 338 331 1604</td>
+                            </tr>
+                            <tr>
+                                <td>Shatha</td>
+                                <td>s142045@student.squ.edu.com</td>
+                                <td>+968 9149 1828</td>
+                                
+                            </tr>
+                            <tr>
+                                <td>Rawan</td>
+                                <td>138028@student.squ.edu.com</td>
+                                <td>+968 7928 5566</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
 
             <!-- Services Section -->
             <div class="services-section">
