Finally Finish Styling

--- a/about.html
+++ b/about.html
@@ -105,17 +105,20 @@
             <h1>Travel</h1>
             <p>travel with us and explore the world without limit</p>
         </div>
-        <div class="about">
-            <h1>About</h1>
-            <p>About Us</p>
-            <p>Features</p>
-            <p>Blog & News</p>
-        </div>
-        <div class="contact">
-            <h1>Contact</h1>
-            <p>+918 91491828</p>
-            <p>Herodev@gmail.com</p>
-        </div>
+        <table>
+            <tr>
+                <th>About</th>
+                <th>Contact</th>
+            </tr>
+            <tr>
+                <td>Blog & News</td>
+                <td>+918 91491828</td>
+            </tr>
+            <tr>
+                <td>Features</td>
+                <td>Herodev@gmail.com</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
