backgroung img added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
     <!-- Section 1 -->
     <div class="content-section">
+        <img src="./images/bg.jpg" alt="">
         <div class="container">
             <p class="Welcome">Welcome to Herodev Web</p>
             <h1>Journey to All Oman Corners</h1>
