--- a/local-stories.html
+++ b/local-stories.html
@@ -43,7 +43,8 @@
     </div>
     <!-- Section 1 -->
     <div class="section1-container text-white text-center ">
-        <h1 class="h1">Explore Activities With Amazing Deals</h1>
+        <img src="./images/Wahiba-Sands9.jpg" alt="">
+        <h1>Explore Activities With Amazing Deals</h1>
         <!-- Search Box -->
         <div class="col-md-6 col-lg-6 col-11 mx-auto my-auto search-box">
             <div class="input-group form-container">
