--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
+    <style>
+    * {
+        box-sizing: border-box;
+        font-family: "Raleway", sans-serif;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+    </style>
     <div class="header">
         <nav class="navbar">
             <div class="brand-logo"><img src="./logo.png" alt=""></div>
