Added photo gallery

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 class="section2-h1">Popular Destinations</h1>
         <div class="card-container">
             <div class="card-article">
-                <img src="./images/DSCF5259.jpg" alt="image" class="card-img">
+                <img id="image1" src="./images/DSCF5259.jpg" alt="image" class="card-img">
                 <div class="card-data">
                    <span class="card-description">Second highest Mountain</span>
                    <h2 class="card-title">Jabel Akhdar</h2>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="card-article"> 
-                <img src="./images//royal-opera-house.jpg" alt="image" class="card-img">
+                <img id="image2" src="./images/royal-opera-house.jpg" alt="image" class="card-img">
                 <div class="card-data">
                    <span class="card-description">Architectural Buildings, Theaters</span>
                    <h2 class="card-title">Opera House</h2>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="card-article">
-                <img src="./images/daymanite.jpg" alt="image" class="card-img">
+                <img id="image3" src="./images/daymanite.jpg" alt="image" class="card-img">
                 <div class="card-data">
                    <span class="card-description">Dolphin & Whale Watching</span>
                    <h2 class="card-title">Daymaniat Shells</h2>
@@ -108,6 +108,10 @@
                 <td>Herodev@gmail.com</td>
             </tr>
         </table>
+    </div>
+    <!-- text banner -->
+    <div class="group">
+        <div class="scrolling-text"></div>
     </div>
 </body>
 </html>
