Added feedback form

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 HeroDev Travel offers the best travel experiences with top-rated destinations and outstanding support. 
                 Our mission is to ensure an unforgettable journey every step of the way.
             </p>
-            <button class="cta-button">Contact Us →</button>
+            <button class="cta-button"><a href="./contact.html">Contact Us</a> →</button>
             <!-- Team Table Section -->
             <section class="contact-table-section">
                 <h2>Our Team</h2>
