--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <th>Contact</th>
             </tr>
             <tr>
-                <td>Blog & News</td>
+                <td><a href="./Feedback/feedback.html">Feedback</a></td>
                 <td>+918 91491828</td>
             </tr>
             <tr>
-                <td>Features</td>
+                <td><a href="./funpage/funpage.html">FunPage</a></td>
                 <td>Herodev@gmail.com</td>
             </tr>
         </table>
