--- a/guide.html
+++ b/guide.html
@@ -57,7 +57,7 @@
           <br>
           <input type="datetime-local">
           <br>
-          <button>Book now</button>
+          <button><a href="./Calculator/calculator.html">Book now</a></button>
         </form>
       </div>
       <h2 class="text-white">Details</h2>
